# deepclaw

./: .env.example  README.md  pyproject.toml
deepclaw/: voice_agent_server.py
docs/plans/: 2026-02-04-deepclaw-v1-design.md  2026-02-04-deepgram-voice-agent-connect-spec.md
skills/deepclaw-voice/: SKILL.md
